# AWTeP.py

./: README.md  pyproject.toml  requirements.txt
test/: test_parser.py
wikiparse/: __init__.py  ast.py  error.py  mediawiki.py  parser.py  source_reader.py  test_mediawiki.py  test_parser.py  test_source_reader.py  utils.py  wikipage.py
wikiparse/interface/: __init__.py  logger.py  requester.py
wikiparse/renderer/: __init__.py  html.py  identifier.py  renderer.py  test_html.py
wikiparse/transformer/: __init__.py  inclusion.py  test_inclusion.py  test_transcluder.py  transcluder.py  transformer.py
