[project]
name = "wikiparse"
version = "0.1.0"
description = "Another WikiText/WikiCode/MediaWiki Parser"
authors = [
  { name = "Kiruse", email = "neurokiruse@outlook.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.8" # earlier versions not yet verified
keywords = ["WikiText", "WikiCode", "MediaWiki", "Parser"]

[urls]
repository = "https://github.com/Kiruse/WikiParse.py"

[dependencies]
advlog = "~=1"
iso639-lang = "~=2.0.1"

[dev-dependencies]
build = "~=0.8"
pytest = "~=7.1.2"

[build-system]
requires = ["setuptools >= 42"]
build-backend = "setuptools.build_meta"
